--- a/Report/project.bib
+++ b/Report/project.bib
@@ -1,17 +1,15 @@
 @article{Cropper/IGGP,
-  author    = {Andrew Cropper and
-               Richard Evans and
-               Mark Law},
-  title     = {Inductive general game playing},
-  journal   = {CoRR},
-  volume    = {abs/1906.09627},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1906.09627},
-  archivePrefix = {arXiv},
-  eprint    = {1906.09627},
-  timestamp = {Thu, 27 Jun 2019 18:54:51 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1906-09627},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+author="Cropper, Andrew
+and Evans, Richard
+and Law, Mark",
+title="Inductive general game playing",
+journal="Machine Learning",
+year="2019",
+month="Nov",
+day="18",
+issn="1573-0565",
+doi="10.1007/s10994-019-05843-w",
+url="https://doi.org/10.1007/s10994-019-05843-w"
 }
 
 @article{Cropper/EfficientLearning,
@@ -82,7 +80,7 @@
  number = {13211-1:1995},
  type = {ISO},
  year = {1995}
- } 
+ }
 
 
 
@@ -273,20 +271,20 @@
 }
 
 @article{Rolf/Metagol,
-  author    = {Andrew Cropper and
-               Rolf Morel and
-               Stephen H. Muggleton},
-  title     = {Learning higher-order logic programs},
-  journal   = {CoRR},
-  volume    = {abs/1907.10953},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1907.10953},
-  archivePrefix = {arXiv},
-  eprint    = {1907.10953},
-  timestamp = {Thu, 01 Aug 2019 08:59:33 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1907-10953.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+author="Cropper, Andrew
+and Morel, Rolf
+and Muggleton, Stephen",
+title="Learning higher-order logic programs",
+journal="Machine Learning",
+year="2019",
+month="Dec",
+day="03",
+abstract="A key feature of inductive logic programming is its ability to learn first-order programs, which are intrinsically more expressive than propositional programs. In this paper, we introduce techniques to learn higher-order programs. Specifically, we extend meta-interpretive learning (MIL) to support learning higher-order programs by allowing for higher-order definitions to be used as background knowledge. Our theoretical results show that learning higher-order programs, rather than first-order programs, can reduce the textual complexity required to express programs, which in turn reduces the size of the hypothesis space and sample complexity. We implement our idea in two new MIL systems: the Prolog system {\$}{\$}{\backslash}text {\{}Metagol{\}}{\_}{\{}ho{\}}{\$}{\$}Metagolho and the ASP system {\$}{\$}{\backslash}text {\{}HEXMIL{\}}{\_}{\{}ho{\}}{\$}{\$}HEXMILho. Both systems support learning higher-order programs and higher-order predicate invention, such as inventing functions for map/3 and conditions for filter/3. We conduct experiments on four domains (robot strategies, chess playing, list transformations, and string decryption) that compare learning first-order and higher-order programs. Our experimental results support our theoretical claims and show that, compared to learning first-order programs, learning higher-order programs can significantly improve predictive accuracies and reduce learning times.",
+issn="1573-0565",
+doi="10.1007/s10994-019-05862-7",
+url="https://doi.org/10.1007/s10994-019-05862-7"
 }
+
 @misc {Metagol/Github,
   author    = {Andrew Cropper and Stephen H. Muggleton},
   title  = {Metagol System},
@@ -544,19 +542,17 @@ journal = {Mathematical Spectrum}
 }
 
 @article{Cropper/Metarules,
-	author    = {Andrew Cropper and
-	Sophie Tourret},
-	title     = {Logical reduction of metarules},
-	journal   = {CoRR},
-	volume    = {abs/1907.10952},
-	year      = {2019},
-	url       = {http://arxiv.org/abs/1907.10952},
-	archivePrefix = {arXiv},
-	eprint    = {1907.10952},
-	timestamp = {Thu, 01 Aug 2019 08:59:33 +0200},
-	biburl    = {https://dblp.org/rec/journals/corr/abs-1907-10952.bib},
-	bibsource = {dblp computer science bibliography, https://dblp.org}
+	author="Cropper, Andrew and Tourret, Sophie",
+title="Logical reduction of metarules",
+journal="Machine Learning",
+year="2019",
+month="Nov",
+day="20",
+issn="1573-0565",
+doi="10.1007/s10994-019-05834-x",
+url="https://doi.org/10.1007/s10994-019-05834-x"
 }
+
 
 @inproceedings{Oblak/Noise,
 	author    = {Andrej Oblak and
