--- a/Report/project.tex
+++ b/Report/project.tex
@@ -11,6 +11,12 @@
 \usepackage[inline]{enumitem}
 \usepackage{fancyvrb}
 
+% for citeyear
+% \usepackage[square]{natbib}
+\usepackage{natbib}
+
+
+
 \usepackage{pgfplots}
 \usepackage{mdframed}
 \usepackage{multirow}
