--- a/Report/01-intro.tex
+++ b/Report/01-intro.tex
@@ -1,5 +1,7 @@
 \chapter{Introduction}\label{ch:intro}
-General Game Playing (GGP) is a framework in which artificial intelligence programs are required to play a large number of games successfully.\cite{Genesereth/GGPOverview}. Traditionally game playing AI have focused on a single game\cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}. Famous AI include programs such as IBMs deep blue which is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is often done outside of the system\cite{Schaeffer/Checkers}. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess\cite{GGP-Website}. The progress in the field is consolidated annually at the GGP where participants compete to find the best GGP AI\cite{Genesereth/GGPOverview}.
+\ac{put a space before the citation, .e.g focused on a single game \cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}.}
+General Game Playing (GGP) is a framework in which artificial intelligence programs are required to play a large number of games successfully\ac{.} \cite{Genesereth/GGPOverview}.
+Traditionally game playing AI have focused on a single game\cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}. Famous AI include programs such as IBMs deep blue which is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is often done outside of the system\cite{Schaeffer/Checkers}. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess\cite{GGP-Website}. The progress in the field is consolidated annually at the GGP where participants compete to find the best GGP AI\cite{Genesereth/GGPOverview}.
 
 The GGP framework includes a large database of games. In a GGP match games from these databases are selected at random and sent to the competitors\cite{Genesereth/GGPOverview}. The games are specified in the Game Description Language (GDL), a logic programming language built for describing games as state machines\cite{GDL_Spec}. A logic programming language being any that is mainly based on formal logic, such as Prolog (see section \ref{sec:prolog}). An example of GDL rules is given in listing \ref{lst:GDL}.
 
@@ -78,6 +80,7 @@ Ideally the generated rules would be compared directly against the rules in the 
 
 We would expect models trained on the same distribution as they are tested on to perform best since it is generally accepted that the accuracy of a model increases the closer the test data distribution is to the training data distribution \cite{Mitchell/MachineLearing}. However, Gonzales and Abu-Mostafa\cite{Gonzalez/MismatchedOutperform} suggest that a system trained on a different domain to the one it is tested can outperform a system trained and tested on the same domain. Given a test distribution there exsists a duel distribution that, when used to train, gives better results. The duel distribution gives a lower out-of-sample\footnote{out-of-sample data is data that is not in the training set} error than using the test distribution. This duel distribution can be thought of as the point in the input space where the least out-of-sample error occurs\cite{Gonzalez/MismatchedOutperform}.
 
+\ac{when using a named reference, also follow it up with the year, e.g. Ben-David et. al \cite{Ben-David/DifferentDomains} show that.}
 As well as optimising the single training distribution we can take data from multiple distinct distributions. Ben-David et. al. show that training data taken from multiple different domains can in fact give lower error on testing data that traning data taken from any single domain, including the testing domain \cite{Ben-David/DifferentDomains}. It is not clear in our case what selection of training data will result in the most effect learning.
 
 To help answer questions 1-3, we make the following contributions:
@@ -85,7 +88,9 @@ To help answer questions 1-3, we make the following contributions:
 \subsubsection{Contributions}
 \begin{itemize}
 \item We implement a system to play GGP games at (1) random and highly intelligent levels (Chapter \ref{ch:traces})
+\ac{is the (1) necessary?}
+
 \item We transform the GGP traces to IGGP problems (Chapter \ref{ch:traces})
-\item We train the ILP systems Metagol, Aleph and ILASP on different combinations of intelligent and random data as well as testing them on each individually (Chapter \ref{ch:methodology})
+\item We train the ILP systems Metagol, Aleph and ILASP on different combinations of intelligent and random data as well as testing them on each individually (Chapter \ref{ch:methodology}) \ac{you need to cite appropriate references for Metagol, Aleph, and ILASP}
 \item We train the ILP systems on differing amounts of traces and test to ascertain the effect this has on the accuracy of the predicted results (Chapter \ref{ch:results})
 \end{itemize}
