--- a/Report/02-related.tex
+++ b/Report/02-related.tex
@@ -2,7 +2,7 @@
 
 \section{GGP}
 
-General game playing is a framework for evaluating an agenet's general intelligence accross a wide range of tasks \cite{Cropper/IGGP,Genesereth/GGPOverview}. The idea is that agents are able to accept declarative descriptions of arbitrary games at run time and are able to use such descriptions to play those games effectively. All the games are finite, discrete, deterministic multi-player games of complete information\cite{GDL_Spec}. The games in the GGP competition game set vary in number of players, dimensions and complexity. For example games such as rock paper scissors have 0 dimensions and only 10 rules in the given GGP rule set, more complex games such as checkers has 52 rules and are 2 dimensional. There are also single player games such as Eight Puzzle or Fizz Buzz.
+General game playing is a framework for evaluating an \ac{agenet's} general intelligence \ac{accross} a wide range of tasks \cite{Cropper/IGGP,Genesereth/GGPOverview}. The idea is that agents are able to accept declarative descriptions of arbitrary games at run time and are able to use such descriptions to play those games effectively. All the games are finite, discrete, deterministic multi-player games of complete information\cite{GDL_Spec}. The games in the GGP competition game set vary in number of players, dimensions and complexity. For example games such as rock paper scissors have 0 dimensions and only 10 rules in the given GGP rule set, more complex games such as checkers has 52 rules and are 2 dimensional. There are also single player games such as Eight Puzzle or Fizz Buzz.
 
 The agents play games selected at random. They are sent a listing of the rules described in the Game Description Language (GDL). GDL is a language based on first order logic (section \ref{sec:GDL}). The list of games along with their descriptions are available online\footnote{http://ggp.stanford.edu/iggpc/}. Matches take place through an online framework called the Gamemaster. The agents connect to an online Game Manager (part of the Gamemaster) service which arbitrates individual matches. After the players have establish a HTTP connection to the Game Manager one of the players takes the role of game director. The game director then broadcasts the following information to the game manger: \begin{enumerate*}[label={\arabic*)}]
 	\item the name of a game that is know to the manager
@@ -10,14 +10,14 @@ The agents play games selected at random. They are sent a listing of the rules d
 	\item the amount of time to be given for each tern
 \end{enumerate*}. The match can then be started by pressing a start button, when pressed the agents will receive a \textit{Start} message including the role of the player (e.g. black or white in chess) and a description of the game in GDL. The Game Manger communicates all instructions to the players through HTTP\cite{Genesereth/GGPOverview}.
 
-In 2005 an annual International General Game Playing Competition (IGGPC) was set up which still runs to this day\cite{Kowalski/GGP}. Each year hopeful participants pit GGP agents against one another to determine the most effective system. The competitors take part in a series of rounds of increasing complexity. The agent that wins the most games in these rounds is declared victorious. The 2014 winner Sancho is used in this paper to generate optimal game traces for the IGGP task.
+In 2005 an annual International General Game Playing Competition (IGGPC) was set up which still runs to this day\cite{Kowalski/GGP}. Each year hopeful participants pit GGP agents against one another to determine the most effective system. The competitors take part in a series of rounds of increasing complexity. The agent that wins the most games in these rounds is declared victorious. The 2014 winner Sancho is used in this paper to generate optimal \ac{are they optimal??} game traces for the IGGP task.
 
 The game descriptions written in GDL used in the GGP competition can be used as example rule sets for systems in Inductive General Game Playing (IGGP) as the output the learners would ideally generate. The descriptions of the games used in GGP are not necessarily minimal so it is possible that an ILP system could generate a more concise rule set than the GGP descriptions.
 
 \subsection{GDL}\label{sec:GDL}
-Game definition language is the formal language used in the GGP competition to specify the rules of the games\cite{GDL_Spec}. The language is based off a logical programming language \textit{datalog}, a subset of Prolog. To understand the semantics of GDL it helps to first cover logic programming as a field of study.
+Game definition \ac{is it not Description} language is the formal language used in the GGP competition to specify the rules of the games\cite{GDL_Spec}. The language is based off a logical programming language \textit{datalog}, a subset of Prolog. To understand the semantics of GDL it helps to first cover logic programming as a field of study.
 \subsubsection{Logic Programming}
-Logic programming is a programming paradigm based on formal logic. Programs are made up of facts and rules. Rules are made up of two parts: the head and the body. They can be read as logical implications where the conjunction of all the elements in the body imply the head. The syntax is different for different logical programming languages but the head is usually written before the body in reverse implication. For example \texttt{a <= b,c} states that \texttt{b} and \texttt{c} imply \texttt{a}. A fact is simply a rule without a body, that is, a statement that is taken as true. The compiler takes queries and returns weather they are true of false. If there are free variables in the query the compiler assigns them values for which the query is true. Logical programming is good for symbolic non-numeric computation\cite{Bratko}. Prolog is one of the most well know logical programming languages\cite{SWIPL} and provides a good introduction to the field. It is discussed in section \ref{sec:prolog}. Logical programming is well suited to solving problems that involve well defined objects and relations between them, such as a GGP game.
+Logic programming is a programming paradigm based on formal logic. Programs are made up of facts and rules. Rules are made up of two parts: the head and the body. They can be read as logical implications where the conjunction of all the elements in the body imply the head. The syntax is different for different logical programming languages but the head is usually written before the body in reverse implication. For example \texttt{a <= b,c}  \ac{<= is odd syntax, is that specific to the GDL? Logic programming notation is usually $\leftarrow$ or \texttt{:-}} states that \texttt{b} and \texttt{c} imply \texttt{a}. A fact is simply a rule without a body, that is, a statement that is taken as true. The compiler \ac{I would say interpreter} takes queries and returns weather \ac{whether} they are true \ac{of} false. If there are free variables in the query the compiler assigns them values for which the query is true. Logical programming is good for symbolic non-numeric computation\cite{Bratko}. Prolog is one of the most well know logical programming languages\cite{SWIPL} and provides a good introduction to the field. It is discussed in section \ref{sec:prolog}. Logical programming is well suited to solving problems that involve well defined objects and relations between them, such as a GGP game.
 \subsubsection{Usefulness of GDL}
 The game description language was designed specifically to represent finite, discrete, deterministic multi-player games of complete information. It is suited to specifying game rules because:
 \begin{itemize}
@@ -38,9 +38,11 @@ In addition, logical rules are used to describe the following:
 \item The termination and goal conditions
 \end{itemize}
 
+\ac{datalog usually starts with a capital, e.g. Datalog}
 The GDL language is an extension of \textit{datalog$^{\neg}$}, that is datalog with stratified negation\cite{GDL_Spec}. \textit{datalog} allows only rules consisting of a conjunction of positive atoms that imply a single atom. \textit{datalog$^{\neg}$} allows for negative as well as positive atoms\cite{Alice/Foundations}. GDL also allows for some functional symbols, that is predicates containing other predicates however it restricts to keep the finite model property that is inherent to \textit{datalog}\cite{GDL_Spec}.
 
 In GDL variables are written with the symbol \texttt{?} before them and rules are written starting with \verb|=>| followed by the head followed by the body predicates which are interpreted as a conjunction. For example \[\texttt{(<= (next (cell ?x ?y ?player)) (does ?player (mark ?x ?y)))}\] in first order logic this would be written \[does(player,(mark(x,y))) \rightarrow cell(x,y,player)\]
+\ac{what about quantifiers?}
 GDL also reserves certain words which are interpreted in special ways:
 \begin{itemize}
 	\item \texttt{true(?f)} - Atom \texttt{?f} is true in the current game state
@@ -58,7 +60,7 @@ In the IGGP problem the given task is to generate the rules to predict the value
 
 
 \section{IGGP}
-The Inductive General Game Playing (IGGP) problem is an inversion of the GGP problem. Rather than using game rules to generate gameplay the learner must learn the rules of the game by watching others play. The learner is given a set of game traces and is tasked with using them to induce (learn) the rules of the game that could have produced the traces\cite{Cropper/IGGP}. IGGP was designed as a way of benchmarking machine learning systems.
+The Inductive General Game Playing (IGGP) problem is an inversion of the GGP problem. Rather than using game rules to generate gameplay the learner must learn the rules of the game by watching others play \ac{I would say from observations of game play - if you say watching then someone might think that it is a visual problem}. The learner is given a set of game traces and is tasked with using them to induce (learn) the rules of the game that could have produced the traces\cite{Cropper/IGGP}. IGGP was designed as a way of benchmarking machine learning systems.
 
 The definition of task itself is based on the Inductive Logic Programming problem.
 
@@ -98,6 +100,7 @@ grandparent(henry,bob)\\
 grandparent(dave,henry)
 \end{cases}
 \]
+\ac{$O^+ \cap \neg O^- =O$ I do not understand this part}
 The program we induce would hopefully look something like this:
 \[H=\begin{cases}
 grandparent(X,Y) \leftarrow parent(X,Z) \wedge parent(Z,Y)\\
@@ -119,6 +122,7 @@ To better understand the IGGP problem and the methods of solving it helps to fir
 
 
 \section{Prolog}\label{sec:prolog}
+\ac{I think this should follow your logic programming section}
 Prolog is one of the most popular and well used logical programming languages. The syntax in Prolog for rules and facts are fairly intuitive. A simple fact might be \mintinline{Prolog}{son(bob,alice).}. This tells us that the atom \mintinline{Prolog}{alice} relates the atom \mintinline{Prolog}{bob} in the \mintinline{Prolog}{son} relation. A rule is written \mintinline{Prolog}{parent(X,Y) :- son(Y,X)} which means if we have the relation son of Y and X then X relates Y in parent. The symbol :- is the same as reverse implication. We can query a program in the Prolog environment. If we typed in "\mintinline{Prolog}{parent(alice,bob).}" then it would return true because we have \mintinline{Prolog}{son(bob,alice)} and the rule which tells us that if X is a son of Y else then Y is a parent of X so \mintinline{Prolog}{alice} is a parent of \mintinline{Prolog}{bob}. Predicates can be conjoined with the comma "," (e.g. \mintinline{Prolog}{a(X,Y,Z) :- b(X,Y), c(Z,Y)}). Disjunction is expressed with the semicolon ";" (e.g. \mintinline{Prolog}{a(X,Y,Z) :- b(X,Y) ; c(Z,Y)}\cite{Bratko}.
 
 Prolog answers queries using a process know as proof seach and unification. The unification process is similar to logical unification, two terms unify if they are the same term or if they contain variables that can be instantiated with terms in such a way that the new terms are equal. For example the terms \mintinline{Prolog}{name(bob).} and \mintinline{Prolog}{name(X).} will unify with \mintinline{Prolog}{X = bob}. The Prolog ISO defines the Herbrand Algorithm for unification \cite{PrologISO}. A Prolog query is a set of goals. The Prolog System decides weather they are satisfiable or not. When a query is asked the of the Prolog system it executes something similar to the following algorithm. The exact implementations vary among Prolog systems however they generally follow this procedure.
@@ -154,7 +158,7 @@ The program listing is searched for a term to unify with. The listing is searche
 \section{ILP systems used}
 We use three ILP systems to compare the effects of different learning data, Metagol, Aleph and ILASP. There are many approaches to the ILP problem\cite{Svetla/ILPOverview,Cropper/NewIdeas}; the three systems here all represent different approaches to the problem but certainly do not give a full representation of the techniques available.
 \subsection{Metagol}
-The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates\cite{Cropper/Thesis,Rolf/Metagol,Metagol/Github}. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \textit{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(A,B)} where a is a list and b is the last element in it. Given the positive example
+The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates\cite{Cropper/Thesis,Rolf/Metagol,Metagol/Github}. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \textit{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables \ac{you are mixing logic programming notation and prolog syntax. A, B, and C are typically first-order variables.}. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(A,B)} where a is a list and b is the last element in it. Given the positive example
 \begin{minted}{Prolog}
 last([a,l,g,o,r,i,t,h,m],m).
 \end{minted}
