--- a/Report/03-logical-setting.tex
+++ b/Report/03-logical-setting.tex
@@ -7,8 +7,8 @@ The IGGP problem is defined in the 2019 paper Inductive General Game Playing \ci
 \item $\mathscr{E}$ the language of examples (observations)
 \item $\mathscr{B}$ the language of background knowledge
 \item $\mathscr{H}$ the language of hypotheses
-\end{itemize} 
-Each of these languages can be see as a subset of those defined for the ILP task. These languages are made up only of function free ground atoms\cite{Uwe/Logic}. In our experiments we transform data from the GDL descriptions of games in the IGGP dataset and transform it into the languages of $\mathscr{B}$ and $\mathscr{E}$. GDL allows for functions (predicates nested in one another) in rules albeit in a restricted form. For example any atom appearing inside a \texttt{true} predicate such as \texttt{true(count(9))}. We flatten all of these to single, non nested predicates, i.e. \verb|true_count(9)|. This is needed as not all ILP systems support function symbols. We can therefore assume that both $\mathscr{E}$ and $\mathscr{B}$ are function-free. The language of hypotheses $\mathscr{H}$ can be assumed to consist of datalog programs with stratified negation as described here\cite{Kenneth}. Stratified negation is not necessary but in practice allows significantly more concise programs, and thus often makes the learning task computationally easier. We first define an IGGP \textit{input} then use it to define the IGGP \textit{problem}. The IGGP input needs to capture the idea of a set of observations about a single game. The input is based on the general input for the Logical induction problem.
+\end{itemize}
+Each of these languages can be see as a subset of those defined for the ILP task. These languages are made up only of function free ground atoms\cite{Uwe/Logic} \ac{the hypotheses are not function-free ground atoms, they are stratified Datalog rules}. In our experiments we transform data from the GDL descriptions of games in the IGGP dataset and transform it into the languages of $\mathscr{B}$ and $\mathscr{E}$. GDL allows for functions (predicates nested in one another) in rules albeit in a restricted form. For example any atom appearing inside a \texttt{true} predicate such as \texttt{true(count(9))}. We flatten all of these to single, non nested predicates, i.e. \verb|true_count(9)|. This is needed as not all ILP systems support function symbols. We can therefore assume that both $\mathscr{E}$ and $\mathscr{B}$ are function-free. The language of hypotheses $\mathscr{H}$ can be assumed to consist of datalog programs with stratified negation as described here\cite{Kenneth}. Stratified negation is not necessary but in practice allows significantly more concise programs, and thus often makes the learning task computationally easier. We first define an IGGP \textit{input} then use it to define the IGGP \textit{problem}. The IGGP input needs to capture the idea of a set of observations about a single game. The input is based on the general input for the Logical induction problem.
 
 \textbf{The IGGP Input:} An input $\Delta$ is a set of triples $\{(B_i,E_i^+,E_i^-)\}_m^{i=0}$ where
 \begin{itemize}
@@ -19,6 +19,8 @@ The IGGP input composes the IGGP problem as follows:
 
 \textbf{The IGGP Problem:} Given an IGGP input $\Delta$, the IGGP problem is to return a hypothesis $H \in \mathscr{H}$ such that for all $(B_i,E_i^+,E_i^-) \in \Delta$ it holds that $H \cup B_i \models E_i^+$ and
 $H \cup B_i \not\models E_i^-$.
+
+\ac{weather typos}
 
 In this paper we use the IGGP problem to analyse ability of ILP agents to learn from on a range of training data of differing quality. To analyse the ability of the ILP systems to learn we use, for each IGGP task $\Delta$ and hypothesis $H$, a testing set $T = T^+\cup T^-$ where
 \begin{itemize}
